--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
 <meta name="author" content="njzhenghao" />
   <meta name="description" content="hi,终于回来了" />
 
-  <meta name="keywords" content="程序猿笔记, java, spring" />
+  <meta name="keywords" content="程序猿笔记, java, 胖瓜博客" />
 
 
 
@@ -148,7 +148,7 @@
       if (window.location.hostname === 'localhost') return;
 
       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-      var disqus_shortname = 'njzhenghao';
+      var disqus_shortname = 'hatebug';
       dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
