--- a/about/index.html
+++ b/about/index.html
@@ -248,6 +248,8 @@ if (!doNotTrack) {
 
 
 
+<script src="/js/pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 
 </body>
 </html>
