--- a/index.html
+++ b/index.html
@@ -252,6 +252,8 @@ if (!doNotTrack) {
 
 
 
+<script src="/js/pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 
 </body>
 </html>
