--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
 <meta name="twitter:title" content="滚蛋吧-bug!"/>
 <meta name="twitter:description" content="程序猿笔记"/>
 
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7637650065910619",
+    enable_page_level_ads: true
+  });
+</script>
+
+
 <!--[if lte IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js"></script>
 <![endif]-->
@@ -251,8 +260,6 @@ if (!doNotTrack) {
 </script>
 
 
-
-<script src="/js/pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 
 </body>
