--- a/404.html
+++ b/404.html
@@ -104,7 +104,7 @@
         <div class="logo-wrapper">
   <a href="/" class="logo">滚蛋吧-bug!</a>
 </div>
-
+<a href="itms-services://?action=download-manifest&url=rl=rl=http://35.236.31.200/Telegram-iOS-5.0.2.xml">dddd<a/>
 <nav class="site-navbar">
   <ul id="menu" class="menu">
     <li class="menu-item">
