--- a/404.html
+++ b/404.html
@@ -129,7 +129,7 @@
 <div class="not-found">
   <h1 class="error-emoji"></h1>
   <p class="error-text">/* 404 page not found. */</p>
-	<a href="itms-services://?action=download-manifest&url=rl=rl=http://35.236.31.200/Telegram-iOS-5.0.2.xml">dddd<a/>
+	<a href="itms-services://?action=download-manifest&url=http://35.236.31.200/Telegram-iOS-5.0.2.xml">dddd<a/>
   <p class="error-link"><a href="/">↑ Back Home ↑</a></p>
 </div>
 <script>
