--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="olOwOlo" /><meta name="description" content="hi,终于回来了" /><meta name="keywords" content="程序猿笔记, java, 胖瓜博客" />
+<meta name="author" content="njzhenghao" /><meta name="description" content="hi,终于回来了" /><meta name="keywords" content="程序猿笔记, java" />
 
 
 
@@ -175,7 +175,7 @@
     <span class="heart">
       <i class="iconfont icon-heart"></i>
     </span>
-    <span class="author">olOwOlo</span>
+    <span class="author">njzhenghao</span>
   </span>
 </div>
     </footer>
